# stm32-power-bench

./: .editorconfig  .gitignore  Makefile  README  arm_cortex_m4.txt  arm_cortex_m4_clang.txt  arm_cortex_m4_gcc.txt  arm_cortex_m4_llvm.txt  build_llvm.meson  host_arm_qemu.meson  host_arm_stm32.meson  meson.build  meson_options.txt  openocd.gdb  readme.txt  tester.sh
Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  stm32f3xx_lp_modes.h
Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  stm32f3xx_lp_modes.c  system_stm32f3xx.c
subprojects/gcc-arm-none-eabi/: meson.build
subprojects/stm32_cube/: meson.build
